--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
                 <div class="card-subsection" style="margin-top:12px;">
                     <h4 style="margin:0 0 8px 0; color:#dfe6e9;">Long Range</h4>
                     <div class="card-actions">
-                        <button class="weapon-btn secondary-action" data-attack="true" onclick="rollLongRangeFirstTurn()">First Turn (2d6 + 2d8 + 13)</button>
-                        <button class="weapon-btn secondary-action" data-attack="true" onclick="rollLongRangeOtherTurns()">Other Turns (2d6 + 1d8 + 13)</button>
+                        <button class="weapon-btn secondary-action" data-attack="true" onclick="rollLongRangeFirstTurn()">First Turn (2d6 + 2d8)</button>
+                        <button class="weapon-btn secondary-action" data-attack="true" onclick="rollLongRangeOtherTurns()">Other Turns (2d6 + 1d8)</button>
                     </div>
                 </div>
             </div>
@@ -252,3 +252,4 @@
     <script src="dice.js"></script>
 </body>
 </html>
+
