--- a/index.html
+++ b/index.html
@@ -187,15 +187,15 @@
                 <div class="card-subsection">
                     <h4 style="margin:0 0 8px 0; color:#dfe6e9;">Short Range</h4>
                     <div class="card-actions">
-                        <button class="weapon-btn secondary-action" data-attack="true" onclick="rollShortRangeFirstTurn()">First Turn (3d6 + 1d8 + 12 + DC 12 Wis)</button>
-                        <button class="weapon-btn secondary-action" data-attack="true" onclick="rollShortRangeOtherTurns()">Other Turns (2d6 + 2 + DC 12 Wis)</button>
+                        <button class="weapon-btn secondary-action" data-attack="true" onclick="rollShortRangeFirstTurn()">First Turn (3d6 + 1d8 + DC 10 Wis)</button>
+                        <button class="weapon-btn secondary-action" data-attack="true" onclick="rollShortRangeOtherTurns()">Other Turns (2d6 + 2 + DC 10 Wis)</button>
                     </div>
                 </div>
                 <div class="card-subsection" style="margin-top:12px;">
                     <h4 style="margin:0 0 8px 0; color:#dfe6e9;">Long Range</h4>
                     <div class="card-actions">
-                        <button class="weapon-btn secondary-action" data-attack="true" onclick="rollLongRangeFirstTurn()">First Turn (2d6 + 2d8)</button>
-                        <button class="weapon-btn secondary-action" data-attack="true" onclick="rollLongRangeOtherTurns()">Other Turns (2d6 + 1d8)</button>
+                        <button class="weapon-btn secondary-action" data-attack="true" onclick="rollLongRangeFirstTurn()">First Turn (2d6 + 2d8 + 10)</button>
+                        <button class="weapon-btn secondary-action" data-attack="true" onclick="rollLongRangeOtherTurns()">Other Turns (2d6 + 1d8 + 10)</button>
                     </div>
                 </div>
             </div>
@@ -252,4 +252,5 @@
     <script src="dice.js"></script>
 </body>
 </html>
+
 
