--- a/index.html
+++ b/index.html
@@ -7,43 +7,45 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap');
         :root{
-            --bg-1: #0f1720;
-            --bg-2: #11131a;
+            --bg-1: #080418;
+            --bg-2: #0b0920;
             --card: rgba(255,255,255,0.03);
-            --muted: #cbd5da;
-            --accent: #6bd6ff;
-            --accent-2: #6fcf9f;
-            --glass: rgba(255,255,255,0.04);
+            --muted: #bfb7c9;
+            --accent: #a678ff;
+            --accent-2: #d6b3ff;
+            --glass: rgba(255,255,255,0.03);
+            --card-border: rgba(255,255,255,0.04);
+            --card-shadow: 0 10px 30px rgba(12,6,20,0.6);
         }
         html,body{height:100%;}
         body {
             font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
-            background: linear-gradient(180deg,var(--bg-1),var(--bg-2));
+            background: radial-gradient(1200px 400px at 10% 10%, rgba(166,120,255,0.06), transparent), linear-gradient(180deg,var(--bg-1),var(--bg-2));
             color: #eef2f7;
             margin: 0;
             -webkit-font-smoothing:antialiased;
             -moz-osx-font-smoothing:grayscale;
         }
-        .container{max-width:1180px;margin:28px auto;padding:0 16px;}
+        .container{max-width:1180px;margin:32px auto;padding:0 18px;}
         h1,h2,h3{margin:0 0 8px 0}
         #dice-title{font-weight:800;margin-top:8px;color:var(--accent);letter-spacing:0.6px}
-        .char-header{display:flex;align-items:center;justify-content:space-between;gap:18px;padding:14px;border-radius:12px;background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent);border:1px solid rgba(255,255,255,0.03);box-shadow:0 6px 30px rgba(2,6,23,0.6)}
+        .char-header{display:flex;align-items:center;justify-content:space-between;gap:18px;padding:16px;border-radius:12px;background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent);border:1px solid var(--card-border);box-shadow:var(--card-shadow)}
         .char-name{font-size:1.45rem;color:#fff}
         .char-sub{color:var(--muted)}
 
         /* Cards grid */
         .cards-grid{display:grid;grid-template-columns:1fr;gap:20px;margin-top:18px;justify-items:center}
         @media(min-width:980px){.cards-grid{grid-template-columns:1fr 1fr}}
-        .card{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:14px;padding:18px;border:1px solid rgba(255,255,255,0.03);box-shadow:0 12px 30px rgba(2,6,23,0.6);width:100%;max-width:560px;transition:transform .18s ease,box-shadow .18s ease;}
-        .card:hover{transform:translateY(-6px);box-shadow:0 22px 48px rgba(2,6,23,0.7)}
+        .card{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:14px;padding:18px;border:1px solid var(--card-border);box-shadow:var(--card-shadow);width:100%;max-width:560px;transition:transform .18s cubic-bezier(.2,.9,.2,1),box-shadow .18s ease;border-left:6px solid transparent}
+        .card:hover{transform:translateY(-6px);box-shadow:0 30px 60px rgba(3,9,18,0.7);border-left-color:rgba(166,120,255,0.18)}
         .card h3{font-size:1.15rem;color:var(--accent-2);text-align:center}
 
         /* Buttons */
         button{font-family:inherit}
         .btn{display:inline-flex;align-items:center;gap:8px;border-radius:10px;padding:10px 14px;border:none;cursor:pointer;font-weight:600}
         .btn:disabled{opacity:0.5;cursor:not-allowed;filter:grayscale(20%)}
-        .weapon-btn{background:transparent;color:#fff;border:1px solid rgba(255,255,255,0.06);padding:10px 14px;border-radius:10px;transition:all .18s ease;box-shadow:0 6px 18px rgba(2,6,23,0.6)}
-        .weapon-btn:hover{transform:translateY(-4px);box-shadow:0 18px 40px rgba(2,6,23,0.55)}
+        .weapon-btn{background:linear-gradient(90deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));color:#fff;border:1px solid rgba(255,255,255,0.04);padding:10px 14px;border-radius:10px;transition:transform .12s ease,box-shadow .12s ease,filter .12s ease;box-shadow:0 8px 18px rgba(2,6,23,0.45)}
+        .weapon-btn:hover{transform:translateY(-3px);filter:brightness(1.02);box-shadow:0 18px 36px rgba(2,6,23,0.5)}
 
         .primary-action{background:linear-gradient(90deg,var(--accent),var(--accent-2));color:#07211f;border:0;padding:12px 18px;border-radius:10px}
         .primary-action:hover{filter:brightness(.98);transform:translateY(-3px)}
@@ -64,7 +66,7 @@
         @keyframes fadeIn{from{opacity:0;transform:translateY(6px)}to{opacity:1;transform:translateY(0)}}
 
         /* Results */
-        #weapon-output{min-height:120px;text-align:center}
+        #weapon-output{min-height:120px;text-align:center;padding:12px;border-radius:8px;background:linear-gradient(180deg, rgba(0,0,0,0.12), transparent);box-shadow:inset 0 -6px 18px rgba(0,0,0,0.2)}
         #magic-output{color:#e8d7ff}
         #spell-slots{font-weight:700;color:var(--muted);margin-top:10px;text-align:center}
 
@@ -72,6 +74,18 @@
         .card-actions{display:flex;flex-wrap:wrap;gap:10px;justify-content:center}
         .char-field{background:transparent;border:1px solid rgba(255,255,255,0.03);padding:8px 12px;border-radius:8px}
         .char-header{align-items:center}
+
+        /* Initiative & Currency specific tweaks */
+        #initiative-list div{background:linear-gradient(90deg,rgba(255,255,255,0.01),transparent);padding:6px;border-radius:6px}
+        #currency-gp{color:#ffd54a}
+        #currency-sp{color:#c0c0ff}
+        #currency-cp{color:#b87333}
+
+        /* Bottom bumber/footer */
+        .bumber{position:fixed;left:12px;right:12px;bottom:12px;background:linear-gradient(90deg,rgba(166,120,255,0.08),rgba(214,179,255,0.06));backdrop-filter:blur(6px);padding:10px 14px;border-radius:10px;border:1px solid rgba(166,120,255,0.12);display:flex;align-items:center;justify-content:space-between;gap:12px;z-index:2200}
+        .bumber .text{color:#e9dbff;font-size:0.95rem}
+        .bumber .muted{color:var(--muted);font-size:0.85rem}
+        .bumber .close-btn{background:transparent;border:1px solid rgba(255,255,255,0.06);color:#fff;padding:6px 8px;border-radius:8px;cursor:pointer}
     </style>
 </head>
 <body>
@@ -355,5 +369,14 @@
     </div>
     
     <script src="dice.js"></script>
+    
+    <!-- Bottom bumber / footer -->
+    <div id="bumber" class="bumber">
+        <div class="text"><strong>D&amp;D Dice Roller</strong> — Local • <span class="muted">v1.0</span></div>
+        <div style="display:flex;gap:8px;align-items:center;">
+            <div class="muted">Made with ❤️ — enjoy rolling!</div>
+            <button class="close-btn" onclick="toggleBumber()">Hide</button>
+        </div>
+    </div>
 </body>
 </html>
