Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -372,11 +372,12 @@
     
     <!-- Bottom bumber / footer -->
     <div id="bumber" class="bumber">
-        <div class="text"><strong>D&amp;D Dice Roller</strong> — Local • <span class="muted">v1.0</span></div>
+        <div class="text"><strong>D&amp;D Dice Roller</strong> — Local • <span class="muted">v69.63</span></div>
         <div style="display:flex;gap:8px;align-items:center;">
-            <div class="muted">Made with ❤️ — enjoy rolling!</div>
+            <div class="muted">Made with pain — Screw your rolling!</div>
             <button class="close-btn" onclick="toggleBumber()">Hide</button>
         </div>
     </div>
 </body>
 </html>
+
