--- a/index.html
+++ b/index.html
@@ -374,9 +374,10 @@
     <div id="bumber" class="bumber">
         <div class="text"><strong>D&amp;D Dice Roller</strong> — Local • <span class="muted">v69.63</span></div>
         <div style="display:flex;gap:8px;align-items:center;">
-            <div class="muted">Made with pain — screw your rolling!</div>
+            <div class="muted">Made with ❤️ — enjoy rolling!</div>
             <button class="close-btn" onclick="toggleBumber()">Hide</button>
         </div>
     </div>
 </body>
 </html>
+
