Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         :root{
             --bg-1: #080418;
             --bg-2: #0b0920;
-            --card: rgba(255,255,255,0.03); 
+            --card: rgba(255,255,255,0.03);
             --muted: #bfb7c9;
             --accent: #a678ff;
             --accent-2: #d6b3ff;
@@ -178,7 +178,7 @@
                 <h3>Magic</h3>
                 <div class="card-actions">
                     <button class="weapon-btn secondary-action" onclick="openMagicRingSelector()">Magic Rings</button>
-                    <button class="weapon-btn secondary-action" onclick="shortRest()">Short Rest (4d10)</button>
+                    <button class="weapon-btn secondary-action" onclick="shortRest()">Short Rest (4d10+1d8)</button>
                     <button class="weapon-btn secondary-action" onclick="longRest()" style="margin-left:8px;">Long Rest</button>
                 </div>
                     <div id="ring-status" style="display: none; margin-top: 12px; padding: 12px; background: #333; border-radius: 8px; border: 2px solid #888; color:#fff;">
@@ -382,4 +382,3 @@
     </div>
 </body>
 </html>
-
