--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
                     <div class="char-field">Class: <span contenteditable="true">Ranger Artificer</span></div>
                     <div class="char-field">Level: <span contenteditable="true">5</span></div>
                     <div class="char-field">Race: <span contenteditable="true">Half elf</span></div>
+                    <div class="char-field">Speed: <span id="speed-display" style="font-weight:700;color:#ffd">20 ft</span></div>
                 </div>
             </div>
             <div class="stats-panel">
