--- a/index.html
+++ b/index.html
@@ -91,6 +91,19 @@
         .bumber .text{color:#e9dbff;font-size:0.95rem}
         .bumber .muted{color:var(--muted);font-size:0.85rem}
         .bumber .close-btn{background:transparent;border:1px solid rgba(255,255,255,0.06);color:#fff;padding:6px 8px;border-radius:8px;cursor:pointer}
+        .floating-inventory {
+            position: fixed;
+            left: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            cursor: pointer;
+            transition: transform 0.2s ease, opacity 0.2s ease;
+            opacity: 0.8;
+        }
+        .floating-inventory:hover {
+            transform: translateY(-50%) scale(1.06);
+            opacity: 1;
+        }
     </style>
     <style>
         /* Life gain / lose visuals */
